2009-01-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize, avt_quit):
	use a specific mouse-pointer

2009-01-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	use circle.xpm, balloonpointer.xpm instead of handwritten code

	* bdfread.pas:
	changes to make it usable with p2c

2009-01-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	added limited support for XPM without SDL_image

	* avatarsay.c (run_info):
	use internal info image info.xpm

	* avatarsay.c (checkoptions, help):
	new options: -I, --info

2009-01-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (menu, run_info), avtwindows.c (open_document):
	show manual in webbrowser under Windows

2009-01-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (run_info):
	show info with no avatar, full-size balloon

	* akfavatar.h, avatar.c (avt_choice):
	use number of items instead of end_line
	result starting from 1
	avatarsay.c, avtfilechooser.c, akfavatar.pas: adapted

2009-01-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_choice):
	new function, replaces avt_menu (for easier language-bindings)
	avatarsay.c, avtfilechooser.c, akfavatar.pas: adapted

2009-01-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (say_line):
	handle newline at the beginning and filter out \r\n

2009-01-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_play_audio):
	set audio buffer size to lower value for lower latency

2009-01-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (iscommand, handle_audio_command):
	new commands: loadaudio, playaudio, playaudioloop

2009-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_play_audio):
	fix: only set soundleft when device could be opened
	(fixes bug #25263)

2008-12-02  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.c: split off the code for mingw
	
	* avtmsg.c (info_msg):
	new function